# pixel-engine

./: .clocignore  .gitignore  CMakeLists.txt  flake.nix  make  makefile  run
assets/shader/: fragment.glsl  vertex.glsl
assets/textures/: atlas.aseprite
src/: cmk
src/engine/: AssetPool.cpp  CMakeLists.txt  Camera.cpp  Component.cpp  FontRendererComponent.cpp  GameObject.cpp  Input.cpp  LevelEditorScene.cpp  RenderBatch.cpp  Renderer.cpp  Scene.cpp  SceneManager.cpp  Shader.cpp  SpriteRenderComponent.cpp  Spritesheet.cpp  Texture.cpp  UserInterface.cpp  Window.cpp  config.h  fileHandler.cpp  logger.cpp  main.cpp
src/engine/assets/: AssetPool.cpp  AssetPool.hpp  Shader.cpp  Shader.hpp  Sprite.hpp  Spritesheet.cpp  Spritesheet.hpp  Texture.cpp  Texture.hpp
src/engine/core/ecs/: Components.hpp  GameObject.cpp  GameObject.hpp  ecs.hpp
src/engine/core/ecs/components/: Component.cpp  FontRendererComponent.cpp  SpriteRenderComponent.cpp
src/engine/core/esc/: Component.cpp  Component.hpp  GameObject.hpp  Transform.hpp
src/engine/core/esc/components/: SpriteRenderComponent.cpp
src/engine/core/scene/: LevelEditorScene.cpp  Scene.cpp  Scene.hpp  SceneManager.cpp
src/engine/header/: typedefs.h
src/engine/input/: Input.cpp  Input.hpp
src/engine/jade/assets/: AssetPool.hpp  Shader.hpp  Spritesheet.hpp
src/engine/jade/rendering/: RenderBatch.hpp  Renderer.hpp
src/engine/jade/windowing/: Input.hpp  UserInterface.hpp  Window.hpp
src/engine/rendering/: Camera.cpp  Camera.hpp  RenderBatch.cpp  RenderBatch.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
src/engine/system/: Input.cpp  Input.hpp  System.hpp  fileHandler.cpp  logger.cpp  logger.h  logger.hpp
src/engine/userInterface/: UserInterface.cpp  UserInterface.hpp
src/engine/windowing/: Window.cpp  Window.hpp
src/game/: LevelEditorScene.cpp  LevelEditorScene.h  main.cpp
src/system/: fileHandler.h  logger.hpp
(+2 files in other folders)
